# fondok

./: .dockerignore  .env.example  .gitignore  .railwayignore  CONTRIBUTING.md  Cloud_AI_Spend_Last3Months.xlsx  DEPLOY.md  Fondok_Cost_Report_Last3Months.xlsx  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  vercel.json
.github/workflows/: alias-fondok-app.yml  ci.yml  e2e.yml
FL Miami South Beach Anglers (Eshan)/: Hotel Underwriting Checklist.xlsx
FL Miami South Beach Anglers (Eshan)/2 - STR Reports/: 56387-20250400-USD-E.xlsx  56387-20250511-USD-E.xlsx  56387-20250518-USD-E.xlsx  56387-20250525-USD-E.xlsx  56387-20250600-USD-E.xlsx  56387-20250601-USD-E.xlsx  56387-20250713-USD-E.xlsx  ANG-20191200-USD-E.xlsx  ANG-20201200-USD-E.xlsx  ANG-20211200-USD-E.xlsx  ANG-20221200-USD-E.xlsx  ANG-20231200-USD-E.xlsx  ANG-20241100-USD-E.xlsx  ANG-20241200-USD-E.xlsx  ANG-20250100-USD-E.xlsx  ANG-20250300-USD-E.xlsx  ANG-20250500-USD-E.xlsx  Weekly STAR_56387-20250706-USD-E-live.xlsx
FL Miami South Beach Anglers (Eshan)/3 - CapEx/: Anglers CapEx.xlsx
FL Miami South Beach Anglers (Eshan)/5 - Floor Plans & Rooms Matrix/: ROOM TYPES COUNT LOCATION.xlsx  Rooms Floor Plan (002) copy.pptx
FL Miami South Beach Anglers (Eshan)/6 - Property Taxes & Insurance/: Angler_s Insurance Summary.xlsx
FL Miami South Beach Anglers (Eshan)/7 - Key Agreements/: Angler_s F&B Agreement Summary.docx  Angler_s HMA Summary.docx
FL Miami South Beach Anglers (Eshan)/8 - Human Resources/: Angler_s - Hotel Org Chart.pptx
FL Miami South Beach Anglers (Eshan)/9 - Sales & Marketing/: 2024 Business Plan.docx
FL Miami South Beach Anglers (Eshan)/Model/: Kimpton Angler 12.10.25 v1.xlsx
apps/web/: .gitignore  README.md  next.config.js  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  (+3 more)
apps/worker/: COST_OPTIMIZATION_GUIDE.md  Dockerfile  README.md  pyproject.toml
apps/worker/app/: __init__.py  alerting.py  audit.py  budget.py  config.py  cost_persistence.py  costs.py  database.py  graph.py  llm.py  main.py  memo_edits.py  migrations.py  state.py  telemetry.py  tenant_middleware.py  usage.py  usali_rules.py
apps/worker/app/agents/: __init__.py  analyst.py  analyst_batch.py  critic.py  due_diligence.py  extractor.py  normalizer.py  qa_resolver.py  researcher.py  router.py  variance.py
apps/worker/app/agents/extraction_schemas/: README.md  _base.md  cbre_horizons.md  comparable_sales.md  loader.py  om.md  pnl_benchmark.md  portfolio_pnl.md  str.md  str_segmentation.md  str_trend.md  t12.md
apps/worker/app/api/: __init__.py  admin_cost.py  analysis.py  audit.py  data_library.py  deals.py  documents.py  dossier.py  due_diligence.py  export.py  health.py  market.py  model.py  observability.py  pipeline_filters.py  portfolio_library.py  scenarios.py  settings.py
apps/worker/app/auth/: __init__.py  clerk_jwt.py  context.py
apps/worker/app/dossier/: __init__.py  builder.py  schema.py
apps/worker/app/engines/: __init__.py  base.py  capex_plan.py  capital.py  comp_sales.py  debt.py  expense.py  fb_revenue.py  historical_baseline.py  historical_variance.py  loi_generator.py  partnership.py  price_solver.py  pricing_sensitivity.py  returns.py  revenue.py  sensitivity.py  str_forecast.py
apps/worker/app/evals/: __init__.py  memo_quality.py
apps/worker/app/export/: __init__.py  excel.py  fixtures.py  memo_pdf.py  presentation.py
apps/worker/app/extraction/: __init__.py  chunking.py  compaction.py  context_store.py  embeddings.py  field_catalog.py  field_catalog.yaml  models.py  numeric.py  parser.py  registry.py  terse_schema.py
apps/worker/app/extraction/template_extractors/: README.md  __init__.py  _common.py  cbre_horizons.py  str_trend.py
apps/worker/app/services/: __init__.py  batch_scheduler.py  comp_set_drift.py  coverage_audit.py  digest_scheduler.py  engine_narratives.py  engine_runner.py  extractor_throttle.py  op_ratio_precedence.py  pipeline.py  pipeline_digest.py  sibling_template.py  str_forecast_loader.py  structural_recognizer.py  usali_scorer.py
apps/worker/app/storage/: __init__.py  raw_store.py
apps/worker/app/streaming/: __init__.py  broadcast.py
apps/worker/app/verification/: __init__.py  numerics.py
apps/worker/scripts/: bench_chunk_size.py  capture_live_extraction.py  gen_external_reports.py  reassign_default_tenant_rows.py
apps/worker/tests/: conftest.py  fondok-costs.db  fondok-obs.db  test_activity_feed.py  test_admin_cost_endpoint.py  test_agents.py  test_alerting.py  test_analyst_batch_api.py  test_analyst_batch_wire_up.py  test_audit.py  test_broker_questions_api.py  test_broker_responses_api.py  test_cache_hits.py  test_capex_three_bucket.py  test_classification_acceptance.py  test_classification_pipeline.py  test_comp_sales.py  test_comp_set_drift.py  test_completeness.py  test_costs.py  test_coverage_audit.py  test_critic.py  test_deals_crud.py  test_debt_engine.py  test_debt_stack_v2.py  test_documents.py  test_dossier.py  test_engine_inputs_loader.py  test_engine_provenance.py  test_engine_runner.py  test_engine_runner_segments.py  test_excel_wave2_3_sections.py  test_expense_engine.py  test_exports.py  test_external_reports_coverage.py  test_extracted_period_year.py  test_extractor_empty_envelope_retry.py  test_extractor_throttle.py  test_golden_set_regression.py  test_historical_baseline.py  (+54 more)
apps/worker/tests/fixtures/: sam_anglers_t12.xlsx  sample_str_trend.xls
apps/worker/tests/fixtures/real_payloads/: anglers_annual_pnl_real.json  anglers_t12_real.json
apps/worker/tests/fixtures/usali_v4/: live_extraction_anglers_annual.json  live_extraction_anglers_om.json  live_extraction_anglers_t12.json  live_extraction_anglers_t12_altrun.json  live_extraction_anglers_t12_altrun2.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  EMAIL_DRAFT_open_questions.md  GETTING_STARTED.md  HOW_FONDOK_CALCULATES.md  ROADMAP.md  RUNBOOK.md  SECURITY_ARCHITECTURE.md  fondok-ai-walkthrough.md
evals/: results.xml  run.py  test-results.xml
infra/: docker-compose.yml
scripts/: deploy.sh  e2e_smoke.py
(+197 files in other folders)
