[project]
name = "fondok-worker"
version = "0.1.0"
description = "Fondok Python worker — FastAPI + LangGraph hotel underwriting agent runtime."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.22.1",
  "langgraph>=0.2.50",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-anthropic>=0.2.0",
  "langchain-core>=0.3.0",
  "langsmith>=0.1.0",
  "anthropic>=0.39.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "fondok-schemas",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-asyncpg>=0.48b0",
  # Real export builders — Excel acquisition model, IC memo PDF, IC deck PPTX.
  # NOTE: weasyprint requires system libraries (cairo, pango, gdk-pixbuf, libffi).
  #   macOS:        brew install cairo pango gdk-pixbuf libffi
  #   Debian/Ubuntu: apt-get install -y libcairo2 libpango-1.0-0 libpangoft2-1.0-0
  "openpyxl>=3.1.2",
  "weasyprint>=63.0",
  "python-pptx>=1.0.0",
  # PDF parsing — PyMuPDF for text + pdfplumber for tables. LlamaParse
  # is optional; only used when ``LLAMA_CLOUD_API_KEY`` is set.
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
  "llama-parse>=0.5.0",
  # Object storage — boto3 for the S3RawStore backend.
  "boto3>=1.35.0",
  # Test fixture generation (sample PDFs) — used by tests/test_documents.py.
  "reportlab>=4.0.0",
  # Pub/sub backend for memo streaming. Without REDIS_URL the broadcast
  # falls back to in-process queues; on Railway (multi-replica) the
  # Redis backend is the only way the SSE subscriber sees publishes
  # from a different worker pod.
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
fondok-schemas = { path = "../../packages/schemas-py", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_anthropic.*", "langchain_core.*"]
ignore_missing_imports = true
